--- a/index.htm
+++ b/index.htm
@@ -10,22 +10,49 @@ h2 {margin:0; color: #000000; font-family: Arial; font-size: 18pt }</style>
 <!--#if expr="(${HTTP_USER_AGENT} = /iPhone/)"--> 
 <meta name = "format-detection" content = "telephone=no"> 
 <!--#endif -->
-<title>Meeting Index</title></head><body bgcolor="#FFFFFF" text="#000000">
+<title>Meetings Index</title></head><body bgcolor="#FFFFFF" text="#000000">
 <div align="center"><center>
 <table border="0" cellspacing="5" width="800"><font  face="Arial" size="12" >
-<tr><td><h2 align="center">Round 1</h2></td></tr>
-<table border="0" cellspacing="5"><font face="Arial" size="12">
+<tr><td><h2 align="center">Stonehaven & District Radio Car Club</h2></td></tr>
+<table border="0" cellspacing="5" width="800"><font  face="Arial" size="12" >
 <tr>
-<td><h5><a href="../index.htm">Main Index</a></h5></td><td>&nbsp;</td>
-<td><h5><a href="compets.htm">Competitors</a></h5></td><td>&nbsp;</td>
-<td><h5><a href="heats.htm">Heat Results</a></h5></td><td>&nbsp;</td>
-<td><h5><a href="finals.htm">Final Results</a></h5></td><td>&nbsp;</td>
-<td><h5><a href="ressum.htm">Meeting Summary</a></h5></td><td>&nbsp;</td>
+<td><h5><a href="racerecindx.htm">Race Records - Personal Bests</a></h5></td><td>&nbsp;</td>
+</tr>
+<tr><td><h2 align="center">Meetings</h2></td></tr>
+<table border="0" cellspacing="5" width="800"><font  face="Arial" size="12" >
+<tr><td ><p class="h5rev">Meeting</p></td><td ><p class="h5rev">Date</p></td><td ><p class="h5rev">Venue</p></td>
+</tr>
+<tr>
+<td><h5><a href="mtg1/index.htm">Round 1</a></h5></td>
+<td><h5>7 April 2024</h5></td>
+<td><h5>SDRCC Mineralwell park</h5></td>
 </tr>
 </font></table>
-<tr><table border="0" cellspacing="5" width="100%"><font  face="Arial" size="12" >
-<tr><td ><p class="h5rev">SDRCC Mineralwell park</p></td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td align="right"><p class="h5rev">7 April 2024</p></td></tr>
-</tr></font></table>
+<tr><td><h2 align="center">Series</h2></td></tr>
+<table border="0" cellspacing="5" width="800"><font  face="Arial" size="12" >
+<tr><td ><p class="h5rev">Series</p></td><td ><p class="h5rev">Date/Venue</p></td>
+</tr>
+<tr>
+<td><h5><a href="ser17/series.htm">2024 2wd </a></h5></td>
+<td><h5></h5></td>
+</tr>
+<tr>
+<td><h5><a href="ser18/series.htm">2024 4wd </a></h5></td>
+<td><h5></h5></td>
+</tr>
+<tr>
+<td><h5><a href="ser19/series.htm">2024 Spec </a></h5></td>
+<td><h5></h5></td>
+</tr>
+<tr>
+<td><h5><a href="ser20/series.htm">2024 Mod </a></h5></td>
+<td><h5></h5></td>
+</tr>
+<tr>
+<td><h5><a href="ser22/series.htm">2024 Mini </a></h5></td>
+<td><h5></h5></td>
+</tr>
+</font></table>
 </font></table>
 <tr><td>&nbsp;</td></tr>
 <tr>
