--- a/index.htm
+++ b/index.htm
@@ -23,7 +23,7 @@ h2 {margin:0; color: #000000; font-family: Arial; font-size: 18pt }</style>
 <tr><td ><p class="h5rev">Meeting</p></td><td ><p class="h5rev">Date</p></td><td ><p class="h5rev">Venue</p></td>
 </tr>
 <tr>
-<td><h5><a href="mtg1/index.htm">Round 1</a></h5></td>
+<td><h5><a href="index1.htm">Round 1</a></h5></td>
 <td><h5>7 April 2024</h5></td>
 <td><h5>SDRCC Mineralwell park</h5></td>
 </tr>
@@ -56,7 +56,7 @@ h2 {margin:0; color: #000000; font-family: Arial; font-size: 18pt }</style>
 </font></table>
 <tr><td>&nbsp;</td></tr>
 <tr>
-<td><h5>bbkRC 2011-1<td><h5><a href="http://www.bbksoftware.com" target = "_blank">© 2000, 2011 bbk Software Ltd</a></h5></td></h5></td>
+<td><h5>bbkRC 2011-1<td><h5><a href="http://www.bbksoftware.com" target = "_blank">Â© 2000, 2011 bbk Software Ltd</a></h5></td></h5></td>
 </tr>
 <tr>
 <td><h5>Licensed to Stonehaven & District Radio Car Club</h5></td>
