--- a/index1.htm
+++ b/index1.htm
@@ -16,7 +16,7 @@ h2 {margin:0; color: #000000; font-family: Arial; font-size: 18pt }</style>
 <tr><td><h2 align="center">Round 1</h2></td></tr>
 <table border="0" cellspacing="5"><font face="Arial" size="12">
 <tr>
-<td><h5><a href="../index.htm">Main Index</a></h5></td><td>&nbsp;</td>
+<td><h5><a href="../index1.htm">Main Index</a></h5></td><td>&nbsp;</td>
 <td><h5><a href="compets.htm">Competitors</a></h5></td><td>&nbsp;</td>
 <td><h5><a href="heats.htm">Heat Results</a></h5></td><td>&nbsp;</td>
 <td><h5><a href="finals.htm">Final Results</a></h5></td><td>&nbsp;</td>
@@ -29,7 +29,7 @@ h2 {margin:0; color: #000000; font-family: Arial; font-size: 18pt }</style>
 </font></table>
 <tr><td>&nbsp;</td></tr>
 <tr>
-<td><h5>bbkRC 2011-1<td><h5><a href="http://www.bbksoftware.com" target = "_blank">© 2000, 2011 bbk Software Ltd</a></h5></td></h5></td>
+<td><h5>bbkRC 2011-1<td><h5><a href="http://www.bbksoftware.com" target = "_blank">Â© 2000, 2011 bbk Software Ltd</a></h5></td></h5></td>
 </tr>
 <tr>
 <td><h5>Licensed to Stonehaven & District Radio Car Club</h5></td>
