--- a/index.htm
+++ b/index.htm
@@ -33,23 +33,23 @@ h2 {margin:0; color: #000000; font-family: Arial; font-size: 18pt }</style>
 <tr><td ><p class="h5rev">Series</p></td><td ><p class="h5rev">Date/Venue</p></td>
 </tr>
 <tr>
-<td><h5><a href="ser17/series.htm">2024 2wd </a></h5></td>
+<td><h5><a href="sseries17.htm">2024 2wd </a></h5></td>
 <td><h5></h5></td>
 </tr>
 <tr>
-<td><h5><a href="ser18/series.htm">2024 4wd </a></h5></td>
+<td><h5><a href="series18.htm">2024 4wd </a></h5></td>
 <td><h5></h5></td>
 </tr>
 <tr>
-<td><h5><a href="ser19/series.htm">2024 Spec </a></h5></td>
+<td><h5><a href="series19.htm">2024 Spec </a></h5></td>
 <td><h5></h5></td>
 </tr>
 <tr>
-<td><h5><a href="ser20/series.htm">2024 Mod </a></h5></td>
+<td><h5><a href="series20.htm">2024 Mod </a></h5></td>
 <td><h5></h5></td>
 </tr>
 <tr>
-<td><h5><a href="ser22/series.htm">2024 Mini </a></h5></td>
+<td><h5><a href="series22.htm">2024 Mini </a></h5></td>
 <td><h5></h5></td>
 </tr>
 </font></table>
