--- a/series17.htm
+++ b/series17.htm
@@ -15,7 +15,7 @@ h2 {margin:0; color: #000000; font-family: Arial; font-size: 18pt }</style>
 <table border="0" cellspacing="5" width="800"><font  face="Arial" size="12" >
 <tr><td><h2 align="center">2024 2wd</h2></td></tr>
 <tr>
-<td><h5><a href="../index.htm">Main Index</a></h5></td><td>&nbsp;</td>
+<td><h5><a href="../index1.htm">Main Index</a></h5></td><td>&nbsp;</td>
 </tr>
 <tr><table border="0" cellspacing="5" width="100%"><font  face="Arial" size="12" >
 <tr><td ><p class="h5rev">SDRCC Mineralwell park</p></td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td align="right"><p class="h5rev">7 April 2024</p></td></tr>
@@ -134,7 +134,7 @@ h2 {margin:0; color: #000000; font-family: Arial; font-size: 18pt }</style>
 </font></table>
 <tr><td>&nbsp;</td></tr>
 <tr>
-<td><h5>bbkRC 2011-1<td><h5><a href="http://www.bbksoftware.com" target = "_blank">© 2000, 2011 bbk Software Ltd</a></h5></td></h5></td>
+<td><h5>bbkRC 2011-1<td><h5><a href="http://www.bbksoftware.com" target = "_blank">Â© 2000, 2011 bbk Software Ltd</a></h5></td></h5></td>
 </tr>
 <tr>
 <td><h5>Licensed to Stonehaven & District Radio Car Club</h5></td>
