--- a/index.htm
+++ b/index.htm
@@ -33,7 +33,7 @@ h2 {margin:0; color: #000000; font-family: Arial; font-size: 18pt }</style>
 <tr><td ><p class="h5rev">Series</p></td><td ><p class="h5rev">Date/Venue</p></td>
 </tr>
 <tr>
-<td><h5><a href="sseries17.htm">2024 2wd </a></h5></td>
+<td><h5><a href="series17.htm">2024 2wd </a></h5></td>
 <td><h5></h5></td>
 </tr>
 <tr>
