--- a/series17.htm
+++ b/series17.htm
@@ -134,7 +134,7 @@ h2 {margin:0; color: #000000; font-family: Arial; font-size: 18pt }</style>
 </font></table>
 <tr><td>&nbsp;</td></tr>
 <tr>
-<td><h5>bbkRC 2011-1<td><h5><a href="http://www.bbksoftware.com" target = "_blank">Â© 2000, 2011 bbk Software Ltd</a></h5></td></h5></td>
+<td><h5>bbkRC 2011-1<td><h5><a href="http://www.bbksoftware.com" target = "_blank">© 2000, 2011 bbk Software Ltd</a></h5></td></h5></td>
 </tr>
 <tr>
 <td><h5>Licensed to Stonehaven & District Radio Car Club</h5></td>
